package com.example.notesapp.core.util

object TestTags {

    const val ORDER_SECTION = "ORDER_SECTION"
    const val ADD_NOTE_TITLE_FIELD = "ADD_NOTE_TITLE_FIELD"
    const val ADD_NOTE_CONTENT_FIELD = "ADD_NOTE_CONTENT_FIELD"
}