...
            FloatingActionButton(
                onClick = {
                    addEditViewmodel.onEvent(AddEditNoteEvent.SaveNote)
                },
                containerColor = MaterialTheme.colorScheme.primary,
            ) {
                Icon(imageVector = Icons.Default.Save, contentDescription = "Save Note")
            }
        }
    ) { padding ->
        Column(
          modifier = Modifier
              .fillMaxSize()
...
